[Fix] Overflow Carrousel

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -246,6 +246,7 @@
   }
 
   .ultimos_lanzamientos {
+    overflow: hidden;
       position: relative;
   }
 
